# C-Projects-From-Newbie

./: .gitignore  CMakeLists.txt  readme.md
al/: allocator.c
algorithms/: avl_tree.c  funcs.h  list_query.c  list_query.h
algorithms/sort/: bubble_sort.c  exchange_sort.c  exchange_sort.h
algorithms/structs/: avl_tree.h
baselib/file/: file.c  file.h
baselib/string-fast/: string-fast.c
baselib/string-lazy/: string-lazy.h
baselib/string/base-funcs/: base-funcs.h
baselib/string/small-string-opt/: small_string_opt.c  small_string_opt.h
baselib/string/string-fast/: string-fast.c
baselib/string/string-lazy/: string-lazy.c
baselib/string/tests/: s_s_o.c
libs/algorithms/: funcs.c  funcs.h
libs/algorithms/sort/: bubble_sort.c  text_sort.c
libs/allocators/allocator_with_arrays/: allocator.c  allocator.h
libs/allocators/allocator_with_list/: allocator.c
libs/string/small-string-opt/: small_string_opt.h
libs/string/string-fast/: string-fast.h
libs/string/trash/wrong_funcs/: base-funcs.c
shell/: shell.c
simple_al/: allocator.c
tests/allocators/: allocator_test.c
tests/string/: s_s_o.c
utils/: hello.txt  key_value_storage.c  key_value_storage.h  ls.c  ls.h  reverse.c  reverse.h  wcat.c  wcat.h  wgrep.c  wgrep.h  wunzip.c  wunzip.h  wzip.c  wzip.h
utils/basic/: reverse.c  reverse.h  wcat.c  wcat.h  wgrep.c  wunzip.c  wzip.c
utils/basic/database/: key_value_storage.c
utils/basic/sys_utils/: ls.c  reverse.h  wzip.c
utils/shell/: shell.c  shell.h
