project(C-Projects-From-Newbie)
add_executable(app
        algorithms/structs/list_query.c
        algorithms/structs/list_query.h
        algorithms/funcs.c
        algorithms/funcs.h
        utils/basic/ls.c
        utils/basic/ls.h
        utils/basic/wcat.c
        utils/basic/wcat.h
        utils/basic/wgrep.c
        utils/basic/wzip.c
        utils/basic/wgrep.h
        utils/basic/wzip.h
        utils/basic/wunzip.c
        utils/basic/wunzip.h
        utils/basic/database/key_value_storage.c
        utils/basic/database/key_value_storage.h
        utils/basic/reverse.c
        utils/basic/reverse.h
        algorithms/sort/exchange_sort.c
        algorithms/sort/text_sort.c
        algorithms/sort/bubble_sort.c)